--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -167,83 +167,85 @@
       </nav>
     </div>
     <!-- SECOND MENU -->
-    <div class="second-menu">
-      <ul class="second-menu-list">
-        <!-- Press "Pages" Open sub menu in mobile -->
-        <li class="second-menu-item">
-          <button
-            class="btn-page-list"
-            type="button"
-            aria-expanded="false"
-            aria-controls="page-submenu"
-          >
-            <span>Pages</span>
-            <svg class="btn-page-icon" width="20" height="20">
-              <use href="/img/icons-menu.svg#icon-Vector-down"></use>
-            </svg>
-          </button>
-          <div id="page-submenu" class="page-submenu-container" hidden>
-            <ul class="page-submenu">
-              <!-- Left side -->
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Home</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">About</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Twitter</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Product Details</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Cart</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Checkout</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Checkout Paypal</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Blog</a>
-              </li>
-              <!-- Right side -->
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Blog Details</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Order Confirmation</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Licenses</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Changelog</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Contact Us</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">404</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">401</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Style Guide</a>
-              </li>
-            </ul>
-          </div>
-        </li>
-        <li class="second-menu-item"><a href="">Shop</a></li>
-        <li class="second-menu-item"><a href="">About</a></li>
-        <li class="second-menu-item"><a href="">Cart(0)</a></li>
-      </ul>
-    </div>
-    <div class="second-login">
-      <button class="second-login-btn" type="button" id="login">Login</button>
+    <div class="second-menu-parent">
+      <div class="second-menu">
+        <ul class="second-menu-list">
+          <!-- Press "Pages" Open sub menu in mobile -->
+          <li class="second-menu-item">
+            <button
+              class="btn-page-list"
+              type="button"
+              aria-expanded="false"
+              aria-controls="page-submenu"
+            >
+              <span>Pages</span>
+              <svg class="btn-page-icon" width="20" height="20">
+                <use href="/img/icons-menu.svg#icon-Vector-down"></use>
+              </svg>
+            </button>
+            <div id="page-submenu" class="page-submenu-container" hidden>
+              <ul class="page-submenu">
+                <!-- Left side -->
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Home</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">About</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Twitter</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Product Details</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Cart</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Checkout</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Checkout Paypal</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Blog</a>
+                </li>
+                <!-- Right side -->
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Blog Details</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Order Confirmation</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Licenses</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Changelog</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Contact Us</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">404</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">401</a>
+                </li>
+                <li class="page-submenu-item">
+                  <a href="#" class="page-submenu-link">Style Guide</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="second-menu-item"><a href="">Shop</a></li>
+          <li class="second-menu-item"><a href="">About</a></li>
+          <li class="second-menu-item"><a href="">Cart(0)</a></li>
+        </ul>
+      </div>
+      <div class="second-login">
+        <button class="second-login-btn" type="button" id="login">Login</button>
+      </div>
     </div>
   </div>
 </header>
