--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./featured.css');
 @import url('./about.css');
 @import url('./contact.css');
 @import url('./subscribe.css');
