--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -62,10 +62,11 @@
         max-width: 1440px;
         flex-direction: row;
         flex-wrap: wrap;
+        padding: 40px 80px;
     }
 
     .sub-title {
-        font-size: 56px;
+        font-size: 52px;
         width: 691px;
     }
 
