--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -16,13 +16,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 27px;
+    gap: 32px;
 }
 
 .contact-icon {
-    width: 94px;
-    height: 94px;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
 }
 
 .contact-box {
@@ -88,6 +86,7 @@
 
     .contact-subtitle {
         font-size: 30px;
+        font-weight: 300;
     }
 
     .contact-link {
