--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -30,10 +30,30 @@
     <img src="/img/hero/Velvety2.webp" alt="" />
   </div>
 
-  <!-- pagination dots -->
+  <!-- dots slide -->
   <div class="hero-dots" role="tablist" aria-label="Hero slides">
-    <button class="dot" aria-label="Slide 1" aria-current="true"></button>
-    <button class="dot" aria-label="Slide 2"></button>
-    <button class="dot" aria-label="Slide 3"></button>
+    <button class="dot" aria-label="Slide 1" aria-current="true">
+      <svg class="dot-vs" width="8" height="8">
+        <use href="/img/icons.svg#dot"></use>
+      </svg>
+    </button>
+
+    <button class="dot" aria-label="Slide 2">
+      <svg class="dot-vs" width="8" height="8">
+        <use href="/img/icons.svg#dot"></use>
+      </svg>
+    </button>
+
+    <button class="dot" aria-label="Slide 3">
+      <svg class="dot-vs" width="8" height="8">
+        <use href="/img/icons.svg#dot"></use>
+      </svg>
+    </button>
+
+    <button class="dot" aria-label="Slide 4">
+      <svg class="dot-vs" width="8" height="8">
+        <use href="/img/icons.svg#dot"></use>
+      </svg>
+    </button>
   </div>
 </section>
