--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,6 @@
 <header class="header">
+  <div class="bg-header-left"></div>
+  <div class="wrapper-bg"></div>
   <!-- logo -->
   <div class="header-container">
     <div class="header-logo-container">
