--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
     <div class="header-logo-container">
       <a class="header-logo-link" href="./">
         <svg
-          class="header-icon-logo"
+          class="header-velvety-logo"
           width="112"
           height="36"
           aria-label="Логотип"
