--- a/src/css/header.css
+++ b/src/css/header.css
@@ -270,7 +270,7 @@ button {
   }
 
   .header-logo-container {
-    margin: 20px 0px 20px 80px;
+    margin: 30px 0px 20px 80px;
   }
 
   .page,
@@ -325,7 +325,7 @@ button {
     position: absolute;
     top: 100px;
     right: 462px;
-    background: #7bb84c;
+    background: #f2f6ef;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 32px 24px;
     min-width: 340px;
@@ -378,5 +378,10 @@ button {
     padding: 8px 12px;
     border-radius: 4px;
     margin: -8px -12px;
+  }
+
+  .header-velvety-logo {
+    width: 137px;
+    height: 44px;
   }
 }
