--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -46,12 +46,64 @@
   /* fill: #213721; */
   /* stroke: #213721; */
 }
-.hero-dots {
-}
+
 .dot {
   background: inherit;
 }
 
 .dot-vs {
   fill: #e4ece0;
+}
+
+/* ==== DESKTOP HERO === */
+@media only screen and (min-width: 1440px) {
+  .hero {
+    width: 1440px;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    position: relative;
+  }
+  .hero-cta {
+    padding: 20px 32px;
+    width: 356px;
+    height: 72px;
+  }
+  .hero-cta-text {
+    font-size: 22px;
+  }
+  .hero-cta-icon {
+    width: 41px;
+    height: 29px;
+  }
+  .hero-dots {
+    position: absolute;
+    top: 292px;
+    left: 68px;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-title {
+    font-size: 108px;
+    text-align: left;
+  }
+  .hero-content {
+    position: absolute;
+    top: 90px;
+    right: 70px;
+    width: 806px;
+    align-items: flex-start;
+  }
+  .hero-product {
+    /* position: relative; */
+    width: 1416px;
+    height: 944px;
+  }
+  .hero-product-image {
+    z-index: 20;
+    position: absolute;
+    top: -50px;
+    left: 50px;
+    width: 500px;
+    height: 910px;
+  }
 }
