--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,8 +20,15 @@
 
   <!-- dots slide -->
   <div class="hero-dots" id="HeroId" role="tablist" aria-label="Hero slides">
+    <!-- arrow left -->
+    <button class="arrorw-btw" aria-label="Slide 4">
+      <svg class="arrow-svg" width="41" height="39">
+        <use href="/img/icons.svg#arrow-left"></use>
+      </svg>
+    </button>
+    <!-- dot items -->
     <button class="dot" aria-label="Slide 1" aria-current="true">
-      <svg class="dot-vs" width="8" height="8">
+      <svg class="dot-vs active" width="8" height="8">
         <use href="/img/icons.svg#dot"></use>
       </svg>
     </button>
@@ -41,6 +48,12 @@
     <button class="dot" aria-label="Slide 4">
       <svg class="dot-vs" width="8" height="8">
         <use href="/img/icons.svg#dot"></use>
+      </svg>
+    </button>
+    <!-- arror  -->
+    <button class="arrorw-btw" aria-label="Slide 4">
+      <svg class="arrow-svg" width="41" height="39">
+        <use href="/img/icons.svg#arrow-right"></use>
       </svg>
     </button>
   </div>
