--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -63,6 +63,11 @@
 .arrorw-btw {
   display: none;
 }
+
+.hero-product-image {
+  width: 200px;
+  height: 395px;
+}
 /* ==== DESKTOP HERO === */
 @media only screen and (min-width: 1440px) {
   .hero {
