--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -30,36 +30,42 @@
   <div class="ingred-right">
     <ul class="ingred-list">
       <li class="ingder-item">
-        <svg class="ingder-svg" width="62" height="65">
+        <svg class="ingder-svg" width="74" height="74">
           <use href="/img/icons.svg#organic"></use>
         </svg>
-        <h3 class="ingred-title">100% Organic</h3>
-        <p class="ingred-p">
-          We craft skincare using the most exquisite ingredients from the plant,
-          earth and mineral realms.
-        </p>
+        <div class="ingred-txt">
+          <h3 class="ingred-title">100% Organic</h3>
+          <p class="ingred-p">
+            We craft skincare using the most exquisite ingredients from the
+            plant, earth and mineral realms.
+          </p>
+        </div>
       </li>
 
       <li class="ingder-item">
-        <svg class="ingder-svg" width="62" height="65">
+        <svg class="ingder-svg" width="74" height="74">
           <use href="/img/icons.svg#skin"></use>
         </svg>
-        <h3 class="ingred-title">Fits your skin</h3>
-        <p class="ingred-p">
-          I’ts all natural and processed based on traditional knowledge with
-          modern technology.
-        </p>
+        <div class="ingred-txt">
+          <h3 class="ingred-title">Fits your skin</h3>
+          <p class="ingred-p">
+            I’ts all natural and processed based on traditional knowledge with
+            modern technology.
+          </p>
+        </div>
       </li>
 
       <li class="ingder-item">
-        <svg class="ingder-svg" width="62" height="65">
+        <svg class="ingder-svg" width="74" height="74">
           <use href="/img/icons.svg#serum"></use>
         </svg>
-        <h3 class="ingred-title">Easy to use</h3>
-        <p class="ingred-p">
-          Packed with a unique design as well as usefull that can help you
-          perform routine skin care.
-        </p>
+        <div class="ingred-txt">
+          <h3 class="ingred-title">Easy to use</h3>
+          <p class="ingred-p">
+            Packed with a unique design as well as usefull that can help you
+            perform routine skin care.
+          </p>
+        </div>
       </li>
     </ul>
   </div>
