--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -108,7 +108,7 @@
   .hero-content {
     position: absolute;
     top: 90px;
-    right: 70px;
+    right: 110px;
     width: 806px;
     align-items: flex-start;
   }
@@ -116,6 +116,8 @@
     /* position: relative; */
     /* width: 1416px; */
     height: 944px;
+    /* відключає можливість взаємодії з елементом */
+    pointer-events: none;
   }
   .hero-product-image {
     z-index: 20;
