--- a/src/css/ingredients.css
+++ b/src/css/ingredients.css
@@ -1,7 +1,7 @@
 .ingredients {
   width: 375px;
   margin: 0 auto;
-  background-color: rgb(224, 170, 103);
+  /* background-color: rgb(224, 170, 103); */
 }
 .ingred-left {
 }
@@ -19,8 +19,7 @@
   height: 227px;
 }
 .ingred-right {
-  background-color: #2733df73;
-  /* background-color: #e4ece0; */
+  background-color: #e4ece0;
   padding: 56px 16px;
 }
 .ingred-list {
@@ -45,10 +44,11 @@
   .ingred-left {
     width: 710px;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    text-align: center;
     flex-direction: column;
     gap: 61px;
+    position: relative;
   }
   .ingder-left-title {
     font-weight: 300;
@@ -56,7 +56,7 @@
     line-height: 1.2;
     letter-spacing: 0.01em;
     color: #213721;
-    margin: 87px auto 0 auto;
+    margin-top: 87px;
     padding: 0;
     width: 594px;
   }
@@ -66,10 +66,33 @@
     padding: 96px 70px 96px 56px;
   }
   .ingred-list {
+    gap: 56px;
   }
   .ingred-picture {
+    position: relative;
     width: 577px;
     height: 350px;
-    margin: 0 auto;
+    top: 61px;
+  }
+  .ingder-item {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+  }
+  .ingder-svg {
+    flex-shrink: 0;
+  }
+  .ingred-txt {
+    gap: 8px;
+  }
+  .ingred-p {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.4;
+    color: #3c5e39;
+  }
+  .ingred-title {
+    font-size: 28px;
+    font-weight: 300;
   }
 }
