add new section diagnosis

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
 @import url('./hero.css');
 @import url('./featured.css');
 @import url('./about.css');
-@import url('./service.css');
+@import url('./diagnosis.css');
 @import url('./testimonials.css');
 @import url('./contact.css');
 @import url('./subscribe.css');
