--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -74,3 +74,14 @@
     </div>
   </div>
 </section>
+<section class="cta-section">
+  <div class="cta-container">
+    <h4 class="cta-title">Let's see the processing of our products</h4>
+    <!-- <button type="button" class="cta-btn"></button> -->
+    <a href="">
+      <svg class="cta-icon" width="120" height="36" aria-label="Vogue">
+        <use href="/img/icons.svg#arrow-right"></use>
+      </svg>
+    </a>
+  </div>
+</section>
