--- a/src/css/about.css
+++ b/src/css/about.css
@@ -165,3 +165,53 @@
     height: 88px;
   }
 }
+
+/* ==== CTA SECTION ==== */
+.cta-section {
+  background-color: #899f87;
+}
+.cta-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 24px;
+  padding: 32px 16px;
+  width: 375px;
+
+  margin: 0 auto;
+}
+.cta-title {
+  font-family: var(--font3);
+  font-weight: 300;
+  font-size: 32px;
+  line-height: 1.3;
+  letter-spacing: -0.03em;
+  color: #f2f6ef;
+}
+.cta-icon {
+  width: 86px;
+  height: 80px;
+  fill: #f2f6ef;
+}
+
+@media only screen and (min-width: 1440px) {
+  .cta-section {
+    width: 100%;
+  }
+  .cta-container {
+    width: 1440px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 80px;
+  }
+  .cta-title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+  .cta-icon {
+    width: 66px;
+    height: 40px;
+  }
+}
