add mobile version and js

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,24 +6,26 @@
                 <p class="products-label">All Products</p>
                 <h2 class="products-title">Mild skincare & facial routine</h2>
             </div>
-            <div class="products-filters">
-                <button class="filter-item filter-item-active">All needs</button>
-                <button class="filter-item">Protect</button>
-                <button class="filter-item">Regenerates</button>
-                <button class="filter-item">Revitalizes</button>
-                <button class="filter-item">Feeds</button>
-                <button class="filter-item">Regulates</button>
-                <button class="filter-item">Purifies</button>
-                <button class="filter-item">Makeup Removal</button>
-                <button class="filter-item">Exfoliate</button>
-                <button class="filter-item">Antioxidant</button>
-                <button class="filter-item">Soothes</button>
-                <button class="filter-item">Smoothes skin texture</button>
-                <button class="filter-item">Tones</button>
-                <button class="filter-item">Anti-waste</button>
-                <button class="filter-item">Hydrate</button>
-                <button class="filter-item">Strengthens</button>
-                <button class="filter-item">Regenerates after UV exposure Strengthens</button>
+            <div class="products-filters swiper">
+                <div class="swiper-wrapper">
+                    <button class="swiper-slide btn-item-active">All needs</button>
+                    <button class="swiper-slide">Protect</button>
+                    <button class="swiper-slide">Regenerates</button>
+                    <button class="swiper-slide">Revitalizes</button>
+                    <button class="swiper-slide">Feeds</button>
+                    <button class="swiper-slide">Regulates</button>
+                    <button class="swiper-slide">Purifies</button>
+                    <button class="swiper-slide">Makeup Removal</button>
+                    <button class="swiper-slide">Exfoliate</button>
+                    <button class="swiper-slide">Antioxidant</button>
+                    <button class="swiper-slide">Soothes</button>
+                    <button class="swiper-slide">Smoothes skin texture</button>
+                    <button class="swiper-slide">Tones</button>
+                    <button class="swiper-slide">Anti-waste</button>
+                    <button class="swiper-slide">Hydrate</button>
+                    <button class="swiper-slide">Strengthens</button>
+                    <button class="swiper-slide">Regenerates after UV exposure Strengthens</button>
+                </div>
             </div>
         </div>
 
@@ -72,10 +74,8 @@
                                         <use href="/img/icons.svg#star"></use>
                                     </svg>
                                 </li>
-                                <li class="product-rating-item">
-                                    <span>5.0</span>
-                                </li>
                             </ul>
+                            <span class="rating-num">5.0</span>
                         </div>
                     </div>
                 </div>
@@ -121,10 +121,8 @@
                                         <use href="/img/icons.svg#star"></use>
                                     </svg>
                                 </li>
-                                <li class="product-rating-item">
-                                    <span>5.0</span>
-                                </li>
                             </ul>
+                            <span class="rating-num">5.0</span>
                         </div>
                     </div>
                 </div>
@@ -168,13 +166,11 @@
                                 </li>
                                 <li class="product-rating-item">
                                     <svg class="product-icon" width="20" height="20" aria-hidden="true">
-                                        <use href="/img/icons.svg#star"></use>
+                                        <use href="/img/icons.svg#star-half-empty"></use>
                                     </svg>
                                 </li>
-                                <li class="product-rating-item">
-                                    <span>4.5</span>
-                                </li>
                             </ul>
+                            <span class="rating-num">4.5</span>
                         </div>
                     </div>
                 </div>
@@ -220,15 +216,16 @@
                                         <use href="/img/icons.svg#star"></use>
                                     </svg>
                                 </li>
-                                <li class="product-rating-item">
-                                    <span>5.0</span>
-                                </li>
                             </ul>
+                            <span class="rating-num">5.0</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <button class="products-btn-more">Shop now</button>
+            <button class="products-btn-more">Shop now
+                <svg class="product-icon" width="31" height="19" aria-label="Логотип">
+                    <use href="/img/icons.svg#arrow-right"></use>
+                </svg></button>
         </div>
     </div>
 </section>
