--- a/src/css/products.css
+++ b/src/css/products.css
@@ -11,6 +11,7 @@
     border-bottom: 1px solid #c8d8c0;
     padding: 64px 16px;
     max-width: 375px;
+    margin: 0 auto;
 }
 
 .products-header {
@@ -27,6 +28,7 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 16px;
+    max-width: 343px;
 }
 
 .products-label {
@@ -46,10 +48,10 @@
 }
 
 .products-filters {
-
+    max-width: 375px;
 }
 
-.filter-item {
+.swiper-slide {
     font-family: var(--font-family);
     font-size: 16px;
     line-height: 1.4;
@@ -62,36 +64,92 @@
     padding: 12px 16px;
 }
 
-.filter-item-active {}
+.swiper {
+    width: 100%;
+}
+
+.products-filters .swiper-slide {
+    width: auto;
+    display: flex;
+} 
+
+.btn-item-active {
+    background-color: #e4ece0;
+    border-color: #c8d8c0;
+}
 
 .products-catalog {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
     gap: 40px;
 }
 
-.products-grid {}
+.products-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
 
-.product-card {}
+.product-card {
+    border: 1px solid #c8d8c0;
+}
 
-.product-card-view {}
+.product-card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 24px;
+    border-top: 1px solid #c8d8c0;
+}
 
-.product-img {}
+.product-card-title {
+    font-family: var(--font-family);
+    font-weight: 300;
+    font-size: 20px;
+}
 
-.product-card-content {}
+.product-card-price {
+    font-family: var(--font-family);
+    font-weight: 700;
+    letter-spacing: 0.01em;
+}
 
-.product-card-title {}
+.product-card-rating {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
 
-.product-card-price {}
+.product-rating {
+    display: flex;
+    gap: 4px;
+}
 
-.product-card-rating {}
+.product-icon {
+    fill: #3c5e39;
+    display: block;
+}
 
-.product-rating {}
+.rating-num {
+    font-family: var(--font-family);
+    font-weight: 300;
+    font-size: 22px;
+    color: #3c5e39;
+    height: 26px;
+}
 
-.product-rating-item {}
+.products-btn-more {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent;
 
-.product-icon {}
+    border: 1px solid #213721;
+    padding: 0px 32px;
+    height: 52px;
 
-.products-btn-more {}
+    font-family: var(--font-family);
+    font-size: 16px;
+    color: #213721;
+}
