--- a/src/css/featured.css
+++ b/src/css/featured.css
@@ -3,15 +3,18 @@
   flex-direction: column;
   width: 375px;
   margin: 0 auto;
-  background: #f2f6ef;
+  background-color: #f2f6ef;
   padding: 64px 0;
   gap: 48px;
+}
+.featured-section {
+  background-color: #f2f6ef;
 }
 .featured-cont {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 16px;
+  /* padding: 0 16px; */
   /* padding-top: 64px; */
   gap: 16px;
 }
@@ -90,15 +93,22 @@
 .featured-icon-star {
   fill: #3c5e39;
 }
-
+.featured-rating-item.clear-star .featured-icon-star {
+  fill: none;
+  stroke: #3c5e39;
+  stroke-width: 1.5;
+}
 @media only screen and (min-width: 1440px) {
   .featured {
     width: 1440px;
     padding-top: 96px;
     padding-bottom: 0;
+    border-top: 1px solid #c8d8c0;
   }
   .featured-tittle-smal {
     font-size: 28px;
+  }
+  .featured-section {
   }
   .featured-title-big {
     font-size: 56px;
