--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,7 +50,9 @@
                       <a href="/order-confirmation">Order Confirmation</a>
                     </li>
 
-                    <li class="pages-menu__item"><a href="/about">About</a></li>
+                    <li class="pages-menu__item">
+                      <a href="/about">About</a>
+                    </li>
                     <li class="pages-menu__item">
                       <a href="/licenses">Licenses</a>
                     </li>
