--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -1,72 +1,74 @@
-<section class="ingredients">
-  <div class="ingred-left">
-    <h2 class="ingder-left-title">
-      Inspired by traditional knowledge and nature
-    </h2>
-    <picture class="ingred-picture">
-      <source
-        srcset="
-          /img/ingredients/desc_ingred.webp      1x,
-          /img/ingredients/desc_ingred@x2.webp2x
-        "
-        media="(min-width: 1440px)"
-      />
+<section class="ingredients-sections">
+  <div class="ingredients">
+    <div class="ingred-left">
+      <h2 class="ingder-left-title">
+        Inspired by traditional knowledge and nature
+      </h2>
+      <picture class="ingred-picture">
+        <source
+          srcset="
+            /img/ingredients/desc_ingred.webp      1x,
+            /img/ingredients/desc_ingred@x2.webp2x
+          "
+          media="(min-width: 1440px)"
+        />
 
-      <source
-        srcset="
-          /img/ingredients/mob-ingred.webp    1x,
-          /img/ingredients/mob-ingred@x2.webp 2x
-        "
-        media="(min-width: 340px)"
-      />
-      <img
-        src="/img/ingredients/mob-ingred.webp"
-        alt="ingredients"
-        width="577"
-      />
-    </picture>
-  </div>
-  <!-- right container -->
-  <div class="ingred-right">
-    <ul class="ingred-list">
-      <li class="ingder-item">
-        <svg class="ingder-svg" width="74" height="74">
-          <use href="/img/icons.svg#organic"></use>
-        </svg>
-        <div class="ingred-txt">
-          <h3 class="ingred-title">100% Organic</h3>
-          <p class="ingred-p">
-            We craft skincare using the most exquisite ingredients from the
-            plant, earth and mineral realms.
-          </p>
-        </div>
-      </li>
+        <source
+          srcset="
+            /img/ingredients/mob-ingred.webp    1x,
+            /img/ingredients/mob-ingred@x2.webp 2x
+          "
+          media="(min-width: 340px)"
+        />
+        <img
+          src="/img/ingredients/mob-ingred.webp"
+          alt="ingredients"
+          width="577"
+        />
+      </picture>
+    </div>
+    <!-- right container -->
+    <div class="ingred-right">
+      <ul class="ingred-list">
+        <li class="ingder-item">
+          <svg class="ingder-svg" width="74" height="74">
+            <use href="/img/icons.svg#organic"></use>
+          </svg>
+          <div class="ingred-txt">
+            <h3 class="ingred-title">100% Organic</h3>
+            <p class="ingred-p">
+              We craft skincare using the most exquisite ingredients from the
+              plant, earth and mineral realms.
+            </p>
+          </div>
+        </li>
 
-      <li class="ingder-item">
-        <svg class="ingder-svg" width="74" height="74">
-          <use href="/img/icons.svg#skin"></use>
-        </svg>
-        <div class="ingred-txt">
-          <h3 class="ingred-title">Fits your skin</h3>
-          <p class="ingred-p">
-            I’ts all natural and processed based on traditional knowledge with
-            modern technology.
-          </p>
-        </div>
-      </li>
+        <li class="ingder-item">
+          <svg class="ingder-svg" width="74" height="74">
+            <use href="/img/icons.svg#skin"></use>
+          </svg>
+          <div class="ingred-txt">
+            <h3 class="ingred-title">Fits your skin</h3>
+            <p class="ingred-p">
+              I’ts all natural and processed based on traditional knowledge with
+              modern technology.
+            </p>
+          </div>
+        </li>
 
-      <li class="ingder-item">
-        <svg class="ingder-svg" width="74" height="74">
-          <use href="/img/icons.svg#serum"></use>
-        </svg>
-        <div class="ingred-txt">
-          <h3 class="ingred-title">Easy to use</h3>
-          <p class="ingred-p">
-            Packed with a unique design as well as usefull that can help you
-            perform routine skin care.
-          </p>
-        </div>
-      </li>
-    </ul>
+        <li class="ingder-item">
+          <svg class="ingder-svg" width="74" height="74">
+            <use href="/img/icons.svg#serum"></use>
+          </svg>
+          <div class="ingred-txt">
+            <h3 class="ingred-title">Easy to use</h3>
+            <p class="ingred-p">
+              Packed with a unique design as well as usefull that can help you
+              perform routine skin care.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
