--- a/src/partials/diagnosis.html
+++ b/src/partials/diagnosis.html
@@ -1,7 +1,7 @@
 <section class="diagnosis">
     <div class="diagnosis-container">
         <div class="diagnosis-media" aria-hidden="true">
-            <img src="../img/diagnosis/image.webp" alt="diagnosis">
+            <img src="/img/diagnosis/image.webp" alt="diagnosis">
         </div>
 
         <div class="diagnosis-box">
